--- a/vif-navigator2/res/values/strings.xml
+++ b/vif-navigator2/res/values/strings.xml
@@ -57,7 +57,8 @@
   Версия 0.0.5 <br>
   Автор : Михаил Желудков <br>
   Лицензия : Apache License, Version 2.0 <br>
-  Проект на github : https://github.com/zheludkovm/VifNavigator2
+  Проект на github : https://github.com/zheludkovm/VifNavigator2 <br>
+  Авторство логотипа принадлежит Alex Lee
   ]]></string>
 
 
